Fix: Filter area spacing

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -167,6 +167,7 @@ article:not(.is-favorite) .kompassi-icon-favorite::before { opacity: 0.5; }
 		}
 		#kompassi_schedule_filters > .input > input {
 			width: calc(100% - var(--kompassi-padding) * 2);
+			box-sizing: content-box;
 		}
 		#kompassi_schedule_filters > .select > * {
 			display: inline-block;
@@ -185,7 +186,7 @@ article:not(.is-favorite) .kompassi-icon-favorite::before { opacity: 0.5; }
 					color: #fff;
 				}
 				#kompassi_schedule_filters button {
-					padding: 0.5em 2em 0.5em 0.5em;
+					padding: var(--kompassi-padding) calc(var(--kompassi-padding) + var(--kompassi-icon-size)) var(--kompassi-padding) var(--kompassi-padding);
 					outline-color: #fff;
 				}
 					#kompassi_schedule_filters option {
